--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,9 @@
+/*!
+ * Bootstrap v3.3.2 (http://getbootstrap.com)
+ * Copyright 2011-2015 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
+
 body.nav-sm .container.body .left_col {
     width: 70px;
     padding: 0;
